test/compile_errors/err_generic_return_mismatch.w
//! expect-error: return type mismatch
fn get_vec() -> Vec[i32]:
    let v: Vec[str] = Vec.new()
    v
